# hibias

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  install.sh  justfile
design/: missing-features.md  mockups.html  onboarding-findings.md
knowledge/: 01-architecture.md  02-spotify-integration.md  03-state.md  04-events-and-commands.md  05-ui.md  06-config-and-cli.md  07-dependencies.md  README.md
src/: api.rs  app.rs  art.rs  auth.rs  input.rs  keys.rs  log.rs  main.rs  recent.rs  streaming.rs  test_support.rs  testmode.rs  ui.rs
src/app/: dispatch.rs  freshness.rs  mod.rs  tests.rs
vhs/: screens.tape
