[package]
name = "hifi"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
base64 = "0.22"
crossterm = { version = "0.29", features = ["event-stream"] }
futures-util = "0.3"
open = "5"
rand = "0.9"
ratatui = "0.29"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "rustls-native-certs", "http2", "charset", "form"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
urlencoding = "2"

[profile.release]
debug = 1
