[package]
name = "hifi"
version = "0.1.0"
edition = "2021"
default-run = "hifi"

[dependencies]
anyhow = "1"
base64 = "0.22"
crossterm = { version = "0.29", features = ["event-stream"] }
dirs-next = "2"
futures-util = "0.3"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
librespot-connect = "0.8"
librespot-core = "0.8"
librespot-playback = { version = "0.8", default-features = false, features = ["native-tls", "rodio-backend"] }
open = "5"
rand = "0.9"
ratatui = "0.29"
ratatui-image = "8"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "rustls-native-certs", "http2", "charset", "form"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
urlencoding = "2"

[[bin]]
name = "hifi"
path = "src/main.rs"

[[bin]]
name = "hifi-diag"
path = "src/bin/diag.rs"

[profile.release]
debug = 1
